--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
+  # Dibawah ini yang bru di tambahin
+  image_picker: ^1.0.7
+  path_provider: ^2.1.2
+  file_picker: ^8.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.2.2
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
